--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-MONGODB_URL=mongodb+srv://brucemel:week1tarea@week1assigment.6fso9dm.mongodb.net/Users
+MONGODB_URL=mongodb+srv://brucemel:week1tarea@week1assigment.6fso9dm.mongodb.net/project1
