--- a/package.json
+++ b/package.json
@@ -1,24 +1,21 @@
 {
   "name": "cse-341-project1",
   "version": "1.0.0",
-  "description": "My Week1 Assigment",
+  "description": "CSE 341 - Web Services Project 1",
   "main": "server.js",
+  "engines": {
+    "node": "20.x"
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/brucemel/cse-341-project1.git"
-  },
-  "author": "Bruce Melendez",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/brucemel/cse-341-project1/issues"
-  },
-  "homepage": "https://github.com/brucemel/cse-341-project1#readme",
   "dependencies": {
-    "dotenv": "^17.2.3",
-    "express": "^5.1.0",
-    "mongodb": "^7.0.0"
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
+    "mongodb": "^6.10.0"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.1"
   }
 }
